0.6.4 - currently working on
- [#3656] Fix: Don't use TYPO3_branch or compat_version
- [#3657] Fix: ObjectFactory::make needs to pass an array to call_user_func_array
- [#3641] Change: Update all copyrights to 2010
- [#3551] Fix: The configuration registry needs to make sure the configuration is loaded in the FE
- [#3460] Fix: Locale configcheck crashes TYPO3 Winstaller
- [#3508] Cleanup: Replace space + tab with tab
- [#3471] Fix: Test failure in tx_oelib_configurationCheck_testcase
- [#3457] Fix: The language functions of the BE-user model return the default not the selected language

0.6.3 - released 2009-10-14
- [#3444] Fix: A model cannot have a relation to itself
- [#3443] Fix: getSubpart('foo') fails if there is text after the marker in the template
- [#3442] Fix: Documentation wrong about getPrefixedMarkers
- [#3412] Fix: db::retrieveColumnsForTable and ::getTcaForTable need to check for the existence of the table
- [#3413] Fix: Some functions in oelib_db are missing the "static" keyword
- [#3388] Fix: Autoloader does not load XCLASS
- [#3370] Fix: Models should be marked as dead on __destruct
- [#3384] Fix: Add XCLASS stuff for the PEAR and emogrifier classes
- [#3335] Fix: The e-mail function tests need to take forceCharset into account

0.6.2 - released 2009-08-15
- [#3338] Fix: E-Mails still contain CRLF
- [#3281] Fix: Free memory more agressively
- [#3340] Change: Move the creation of the headers and the body out of the loop in abstractMailer::send
- [#3328] Fix: Ghost acquired via getNewGhost must not be loaded
- [#3317] Fix: Check for object comparisons / recursive nesting
- [#3320] Fix: Unbreak GMX by changing the default encoding for e-mails from base64 back to quoted-printable
- [#3319] Change: Use only LF in the e-mail body
- [#3250] Change: Throw an exception when trying to save a model that has been created using getNewGhost or getLoadedTestingModel
- [#920] Fix: Umlauts in sender names are broken
- [#3226] Change: Add a test for getTcaForTable