@@ -1,4 +1,5 @@
 0.6.4 - currently working on
+- [#3372] Fix: Umlauts not encoded correctly in the e-mail headers (again)
 - [#3656] Fix: Don't use TYPO3_branch or compat_version
 - [#3657] Fix: ObjectFactory::make needs to pass an array to call_user_func_array
 - [#3641] Change: Update all copyrights to 2010
